Wed Apr  8 00:59:13 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* variable.c (rb_const_defined): returned false even if the
	  constant is defined at the top level.

	* eval.c (f_local_variables): dyna_var->id may be null.  should
	  have checked before calling str_new2().

Tue Apr  7 18:50:16 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* experimental release 1.1b9_08.

Tue Apr  7 18:31:27 1998  WATANABE Hirofumi  <watanabe@ase.ptg.sony.co.jp>

	* instruby.rb (mandir): dll installation for cygwin32

Tue Apr  7 01:16:45 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* config.sub (maybe_os): TOWNS support?

	* config.guess: too strict check for libc versions on linuxes.

	* experimental release 1.1b9_07.

	* array.c (ary_cmp): compare each element using `<=>'.

	* hash.c (hash_each_with_index): yields [value, key] pair.

	* class.c (class_protected_instance_methods): list protected
	  method names.

	* class.c (ins_methods_i): exclude protected methods.

	* eval.c (PUSH_BLOCK): dynamic variables can be accessed from
 	  eval() with bindings.

Mon Apr  6 14:49:06 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (thread_yield): must return evaluated value.

Fri Apr  3 13:07:29 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (thread_schedule): context switch bypassed on wrong
	  conditions.

	* variable.c (rb_name_class): set classname by id before String
 	  class is initialized (1.0 behavior restored).

Fri Apr  3 11:25:45 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* numeric.c (num2int): no implicit conversion from string.

	* numeric.c (num2int): check whether `to_i' returns an Integer.

	* numeric.c (num_zero_p): new method.

	* numeric.c (num_nonzero_p): new method.  returns the receiver if
 	  it's not zero.

	* eval.c (obj_instance_eval): the_class should be the object's
	  singleton class.

	* error.c (exc_s_new): message is converted into a string.

Thu Apr  2 18:31:46 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>
