@@ -169,6 +169,7 @@ sample/from.rb
 sample/fullpath.rb
 sample/getopts.test
 sample/goodfriday.rb
+sample/inf-ruby.el
 sample/less.rb
 sample/list.rb
 sample/list2.rb
